<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:layout_marginStart="10dp"
    android:layout_marginTop="10dp"

    android:backgroundTint="#8BC34A"
    android:orientation="vertical"
    tools:context=".HomeFragment">

    <FrameLayout
        android:id="@+id/frame_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/big_rounded_corner_background"
        android:visibility="visible"
        tools:visibility="visible">

        <LinearLayout
            android:id="@+id/form_frame"
            android:layout_width="match_parent"
            android:layout_height="643dp"
            android:orientation="vertical"
            android:visibility="visible"
            tools:visibility="visible">

            <!-- TODO: Update blank fragment layout -->
            <TextView
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp"
                android:paddingTop="20dp"
                android:text="@string/keyword"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <AutoCompleteTextView
                android:id="@+id/keyword_input"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                android:hint="Enter keyword"
                android:outlineAmbientShadowColor="#4CAF50"
                android:singleLine="false"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:text="@string/distance"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/distance_input"
                android:layout_width="343dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                android:color="@color/white"
                android:hint="Enter distance"
                android:inputType="number"
                android:text="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <TextView
                android:layout_width="344dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="5dp"
                android:backgroundTint="#8BC34A"
                android:text="@string/category"
                android:textColor="@color/green"
                android:textSize="20dp" />

            <Spinner
                android:id="@+id/category_input"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="20dp"
                android:background="@color/black"
                android:backgroundTint="@color/black"
                android:backgroundTintMode="src_atop"
                android:contextClickable="true"
                android:entries="@array/category_names"
                android:foregroundTint="#183910"
                android:foregroundTintMode="src_in"
                android:prompt="@string/category_prompt"
                android:spinnerMode="dropdown"
                android:textSize="20dp"
                android:theme="@style/mySpinnerItemStyle" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/location"
                    android:textColor="@color/green"
                    android:textSize="20dp" />

                <Switch
                    android:id="@+id/switchAutoLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:checked="false"
                    android:text="Auto-detect location"
                    android:textColor="@color/green" />
            </LinearLayout>


            <EditText
                android:id="@+id/location_input"
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginBottom="10dp"
                android:hint="Enter location"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <LinearLayout
                android:id="@+id/linearLayout1"
                android:layout_width="338dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/search_button"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#4CAF50"
                    android:text="Search" />

                <Button
                    android:id="@+id/clear_button"
                    android:layout_width="146dp"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#FF5722"
                    android:text="Clear" />

            </LinearLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/recyclerFrameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D6D3D3"
            android:visibility="gone"
            tools:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="697dp"
                android:layout_below="@id/buttonbig"
                android:background="#D6D3D3"
                android:scrollbars="vertical" />

            <LinearLayout
                android:id="@+id/buttonbig"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/backButton"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="@android:color/transparent"
                    android:contextClickable="false"
                    android:scaleX="1"
                    android:scaleY="1.5"
                    android:src="@drawable/baseline_keyboard_backspace_24"
                    android:textAlignment="viewStart" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:text="Back to Search"
                    android:textColor="@color/black"
                    android:textSize="20dp" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/no_events_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/rounded_corner_background"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="No events found"
                    android:textColor="@color/green" />

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:id="@+id/homeprogress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@color/white"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="gone">

            <ProgressBar
                android:id="@+id/home_tmp_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"

                android:indeterminate="true"
                android:max="100"
                android:progress="95"
                android:progressDrawable="@drawable/green_circular_progress_bar" />

        </LinearLayout>


    </FrameLayout>


</FrameLayout>
